src/test/ui/generator/type-mismatch-signature-deduction.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-signature-deduction.rs:8:20
   |
LL |             return Ok(6);
   |                    ^^^^^ expected i32, found enum `Result`
   |
   = note: expected type `i32`
              found type `Result<{integer}, _>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
